--- a/client/src/app/app.html
+++ b/client/src/app/app.html
@@ -1,3 +1,5 @@
 <app-header></app-header>
 
-<h2 class="text-3xl font-bold underline">welcome to {{title()}}</h2>
+<div class="container mt-6">
+<app-shop></app-shop>
+</div>
