end the uint 9-82

--- a/client/src/app/layout/header/header.component.html
+++ b/client/src/app/layout/header/header.component.html
@@ -13,7 +13,7 @@
                 <mat-icon>shopping_cart</mat-icon>
             </a>
             <button mat-stroked-button class="flex items-center">Login</button>
-            <button mat-stroked-button class="flex items-center">Login</button>
+            <button mat-stroked-button class="flex items-center">regaster</button>
         </div>
     </div>
 </header>
