--- a/client/src/app/features/shop/filters-dialog/filters-dialog.component.html
+++ b/client/src/app/features/shop/filters-dialog/filters-dialog.component.html
@@ -1,27 +1,28 @@
 <div>
+    
     <h3 class="text-3xl text-center pt-6 mb-3">filters</h3>
     <mat-divider></mat-divider>
     <div class="flex p-4">
         <div class="w-1/2">
             <h4 class="font-semibold text-xl text-primary">Brands</h4>
-            <mat-selection-list>
-                @for (brand of shopService.brands; track $index) {
-                    <mat-list-option>{{brand}}</mat-list-option>
+            <mat-selection-list [(ngModel)]="selectedBrands" [multiple]="true">
+                @for (brands of shopService.brands; track $index) {
+                    <mat-list-option [value]="brands">{{brands}}</mat-list-option>
                 }
             </mat-selection-list>
         </div>
         <div class="w-1/2">
             <h4 class="font-semibold text-xl text-primary">types</h4>
-            <mat-selection-list>
+            <mat-selection-list [(ngModel)]="selectedTypes" [multiple]="true">
                 @for (types of shopService.types; track $index) {
-                    <mat-list-option>{{types}}</mat-list-option>
+                    <mat-list-option [value]="types">{{types}}</mat-list-option>
                 }
             </mat-selection-list>
         </div>
 
     </div>
     <div class="flex justify-end p-4">
-        <button mat-flat-button>Apply Filters</button>
+        <button mat-flat-button (click)="applyFilters()">Apply Filters</button>
 
     </div>
 </div>
