--- a/client/src/app/features/shop/shop.component.html
+++ b/client/src/app/features/shop/shop.component.html
@@ -1,8 +1,12 @@
 <div class="flex flex-col gap-3">
-    <div class="flex justify-end">
+    <div class="flex justify-end gap-3">
         <button mat-stroked-button (click)="openFiltersDialog()">
             <mat-icon>filter_list</mat-icon>
             Filters
+        </button>
+        <button mat-stroked-button [matMenuTriggerFor]="sortMenu">
+            <mat-icon>swep_vert</mat-icon>
+            Sort
         </button>
     </div>
     <div class="grid grid-cols-4 gap-4">
@@ -11,4 +15,14 @@
         }
     </div>
 </div>
+<mat-menu #sortMenu="matMenu">
+    <mat-selection-list [multiple]="false" (selectionChange)="onSortChange($event)">
+        @for (Sort of sortOptions; track $index) {
+            <mat-list-option [value]="Sort.value" [selected]="selectedSort===Sort.value">
+                {{Sort.label}}
+            </mat-list-option>
+        }
+    </mat-selection-list>
+
+</mat-menu>
 
